# IA-Perceptron

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: c-cpp.yml  makefile.yml
src/: examples.cc  main.cpp  perceptron.cpp  perceptron.h
